implemented list of absolute and relative centroids

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,42 +27,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "NLSwyNFwHXUQ",
-        "outputId": "47ce0e16-7330-4a26-cf0c-2d10745da746",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "NLSwyNFwHXUQ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting torchmetrics\n",
-            "  Downloading torchmetrics-1.1.1-py3-none-any.whl (763 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/763.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.4/763.4 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m757.8/763.4 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m763.4/763.4 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.23.5)\n",
-            "Requirement already satisfied: torch>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.0.1+cu118)\n",
-            "Collecting lightning-utilities>=0.8.0 (from torchmetrics)\n",
-            "  Downloading lightning_utilities-0.9.0-py3-none-any.whl (23 kB)\n",
-            "Requirement already satisfied: packaging>=17.1 in /usr/local/lib/python3.10/dist-packages (from lightning-utilities>=0.8.0->torchmetrics) (23.1)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from lightning-utilities>=0.8.0->torchmetrics) (4.7.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.1->torchmetrics) (3.12.2)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.1->torchmetrics) (1.12)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.1->torchmetrics) (3.1)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.1->torchmetrics) (3.1.2)\n",
-            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.10/dist-packages (from torch>=1.8.1->torchmetrics) (2.0.0)\n",
-            "Requirement already satisfied: cmake in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=1.8.1->torchmetrics) (3.27.2)\n",
-            "Requirement already satisfied: lit in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch>=1.8.1->torchmetrics) (16.0.6)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.8.1->torchmetrics) (2.1.3)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.8.1->torchmetrics) (1.3.0)\n",
-            "Installing collected packages: lightning-utilities, torchmetrics\n",
-            "Successfully installed lightning-utilities-0.9.0 torchmetrics-1.1.1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn # Contains Required functions and layers\n",
@@ -150,31 +119,16 @@
         "id": "PZG8udJCP8HY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 458
         },
-        "outputId": "c181078f-c46a-450d-f860-e7a39520b2db"
+        "outputId": "5f061cc3-55a7-49a5-b7f6-445f517bbc9e"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading https://www.itl.nist.gov/iaui/vip/cs_links/EMNIST/gzip.zip to data/EMNIST/raw/gzip.zip\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 561753746/561753746 [00:03<00:00, 173286883.35it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting data/EMNIST/raw/gzip.zip to data/EMNIST/raw\n",
             "tensor([23,  7, 16,  ..., 13, 15, 19])\n",
             "['N/A', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
             "tensor([ 1,  1,  1,  ..., 26, 26, 26])\n"
@@ -211,13 +165,13 @@
       ],
       "metadata": {
         "id": "tNqiXFct9jI_",
-        "outputId": "6a4bc598-7751-4aa2-9f95-805a272a132a",
+        "outputId": "99bd0dc4-db40-44bf-e665-652a9a3251e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +184,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 13
         }
       ]
     },
@@ -241,13 +195,13 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "21757db5-c3bd-4a4a-a1d8-128c6dff376c",
+        "outputId": "0fca4279-cfdc-4f9c-844f-665143cb7071",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,13 +245,13 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "ef283bfa-1ba7-4a61-eaf8-73a317422fb0",
+        "outputId": "a96b4447-3511-4586-f902-e90f9891a4d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,7 +334,7 @@
         "      else:\n",
         "        centroids_rel.append([0, 0])\n",
         "\n",
-        "  return sample_img, torch.tensor(centroids_abs, dtype=torch.float), torch.tensor(centroids_rel, dtype=torch.float)\n",
+        "  return sample_img, centroids_abs, centroids_rel\n",
         "\n",
         "\n",
         "# Elia\n",
@@ -399,7 +353,7 @@
         "    density_img[i:i+dim_mask, j:j+dim_mask] = density\n",
         "    densities.append(density)\n",
         "\n",
-        "  return density_img, torch.tensor(densities)\n",
+        "  return density_img, densities\n",
         "\n",
         "\n",
         "\n",
@@ -416,17 +370,17 @@
         "\n",
         "\n",
         "\n",
-        "# CHECK IF IT'S STILL CORRECT\n",
-        "def load_sample_images(tr_images_bin, dim_mask):\n",
-        "  samples_and_centroids = []\n",
-        "  for i in range(tr_images_bin.size()[0]):\n",
-        "    # shape --> [ ( tensor(), tensor(), tensor() ), (..., ..., ...), ... ]\n",
-        "    samples_and_centroids.append(zoning(tr_images_bin[i]))\n",
         "\n",
-        "  samples = torch.tensor([s[0].tolist() for s in samples_and_centroids])\n",
-        "  centroids_abs = [c[1].tolist() for c in samples_and_centroids]\n",
-        "  centroids_rel = [c[2].tolist() for c in samples_and_centroids]\n",
-        "  return samples, centroids_abs, centroids_rel\n",
+        "def load_sample_images(tr_images_bin):\n",
+        "  tr_images_cen=torch.zeros(tr_images_bin.size())\n",
+        "  list_cen_abs=[]\n",
+        "  list_cen_rel=[]\n",
+        "  for i in range(tr_images_bin.size()[0]):\n",
+        "    tr_images_cen[i], abs, rel = zoning(tr_images_bin[i])\n",
+        "    list_cen_abs.append(abs)\n",
+        "    list_cen_rel.append(rel)\n",
+        "\n",
+        "  return tr_images_cen, list_cen_abs, list_cen_rel\n",
         "\n",
         "\n",
         "\n",
@@ -461,90 +415,21 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 812
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "2365af66-eb0b-4488-ae6e-8fa67ff6a649"
+        "outputId": "7b0c9183-42ea-4b8e-af46-a3ac9baeab8d"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Centroids_abs: \n",
-            " tensor([[ 2.,  6.],\n",
-            "        [ 2.,  9.],\n",
-            "        [ 3., 12.],\n",
-            "        [ 4.,  5.],\n",
-            "        [ 4.,  9.],\n",
-            "        [ 4., 13.],\n",
-            "        [ 6., 17.],\n",
-            "        [ 7., 20.],\n",
-            "        [ 9., 10.],\n",
-            "        [10., 12.],\n",
-            "        [ 8., 21.],\n",
-            "        [10., 24.],\n",
-            "        [13., 12.],\n",
-            "        [18., 11.],\n",
-            "        [17., 12.],\n",
-            "        [22.,  2.],\n",
-            "        [23.,  5.],\n",
-            "        [22., 10.],\n",
-            "        [21., 12.],\n",
-            "        [24.,  3.],\n",
-            "        [24.,  5.],\n",
-            "        [24.,  8.]])\n",
+            " [[2, 6], [2, 9], [3, 12], [4, 5], [4, 9], [4, 13], [6, 17], [7, 20], [9, 10], [10, 12], [8, 21], [10, 24], [13, 12], [18, 11], [17, 12], [22, 2], [23, 5], [22, 10], [21, 12], [24, 3], [24, 5], [24, 8]]\n",
             "Centroids_rel: \n",
-            " tensor([[0., 0.],\n",
-            "        [3., 3.],\n",
-            "        [3., 2.],\n",
-            "        [4., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [1., 2.],\n",
-            "        [1., 2.],\n",
-            "        [1., 2.],\n",
-            "        [3., 2.],\n",
-            "        [4., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [2., 3.],\n",
-            "        [3., 1.],\n",
-            "        [0., 0.],\n",
-            "        [1., 2.],\n",
-            "        [3., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [2., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [3., 4.],\n",
-            "        [2., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [3., 3.],\n",
-            "        [4., 2.],\n",
-            "        [3., 3.],\n",
-            "        [2., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [1., 4.],\n",
-            "        [1., 2.],\n",
-            "        [1., 1.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.],\n",
-            "        [0., 0.]])\n"
+            " [[0, 0], [3, 3], [3, 2], [4, 1], [0, 0], [0, 0], [0, 0], [0, 0], [1, 2], [1, 2], [1, 2], [3, 2], [4, 1], [0, 0], [0, 0], [0, 0], [2, 3], [3, 1], [0, 0], [1, 2], [3, 1], [0, 0], [0, 0], [0, 0], [2, 1], [0, 0], [0, 0], [0, 0], [0, 0], [0, 0], [3, 4], [2, 1], [0, 0], [0, 0], [0, 0], [3, 3], [4, 2], [3, 3], [2, 1], [0, 0], [0, 0], [0, 0], [1, 4], [1, 2], [1, 1], [0, 0], [0, 0], [0, 0], [0, 0]]\n"
           ]
         },
         {
@@ -558,7 +443,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -585,6 +470,32 @@
     {
       "cell_type": "code",
       "source": [
+        "tr_sample_images, list_centroids_abs, list_centroids_rel = load_sample_images(tr_images_bin, dim_mask)\n",
+        "print(tr_sample_images.size())\n",
+        "print(len(list_centroids_abs[0]))"
+      ],
+      "metadata": {
+        "id": "r2rMMBxwBdot",
+        "outputId": "ab6f7849-d384-4730-86f7-30faa3b38409",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([124800, 28, 28])\n",
+            "25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# zoning with density features\n",
         "density_img, densities = zoning(bin_img, option=\"density\")\n",
         "\n",
@@ -602,13 +513,13 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "a7b81e9a-3b4e-48f7-c390-3cbae1ae8238",
+        "outputId": "8fb15539-4693-4009-abc2-fad78e01ea39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 687
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,13 +692,13 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "d0e1e2ec-c3a8-4e39-e6c2-95b318b27d8d",
+        "outputId": "f4c03896-151f-484e-a1c2-422930cf361b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 805
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,12 +771,12 @@
       ],
       "metadata": {
         "id": "a6wYHSlW6TIi",
-        "outputId": "26605d2e-2252-4fa4-8816-93ed8f10fc0d",
+        "outputId": "406fa00c-5425-490b-d5ed-8617e88c8904",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1026,10 +937,24 @@
         "    print(loss.item()) # print loss for each epoch"
       ],
       "metadata": {
-        "id": "KNvh-lr3onFu"
+        "id": "KNvh-lr3onFu",
+        "outputId": "fcc48a44-0194-47a5-a9db-6aa1b5df3e66",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 140
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-8e5658e4d557>\"\u001b[0;36m, line \u001b[0;32m38\u001b[0m\n\u001b[0;31m    def normalize(value, min, max)\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+          ]
+        }
+      ]
     }
   ]
 }
