First part of dateset creation

--- a/AI_project.ipynb
+++ b/AI_project.ipynb
@@ -27,12 +27,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 24,
       "metadata": {
-        "id": "NLSwyNFwHXUQ"
+        "id": "NLSwyNFwHXUQ",
+        "outputId": "fadc7d58-ff25-4ace-d4cd-17be1e4ec047",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ],
       "source": [
+        "!pip install -Uqq ipdb\n",
+        "import ipdb\n",
         "import torch\n",
         "import torch.nn as nn # Contains Required functions and layers\n",
         "import torch.nn.functional as F # For neural network functions:\n",
@@ -119,16 +134,31 @@
         "id": "PZG8udJCP8HY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 508
         },
-        "outputId": "5f061cc3-55a7-49a5-b7f6-445f517bbc9e"
+        "outputId": "52ec9308-c518-41e2-aae2-6daecf658e6a"
       },
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Downloading https://www.itl.nist.gov/iaui/vip/cs_links/EMNIST/gzip.zip to data/EMNIST/raw/gzip.zip\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 561753746/561753746 [00:03<00:00, 145620037.08it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/EMNIST/raw/gzip.zip to data/EMNIST/raw\n",
             "tensor([23,  7, 16,  ..., 13, 15, 19])\n",
             "['N/A', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
             "tensor([ 1,  1,  1,  ..., 26, 26, 26])\n"
@@ -165,13 +195,13 @@
       ],
       "metadata": {
         "id": "tNqiXFct9jI_",
-        "outputId": "99bd0dc4-db40-44bf-e665-652a9a3251e4",
+        "outputId": "398fdc37-66a6-4966-9fe8-d7bea6aceb78",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         }
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +214,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 3
         }
       ]
     },
@@ -195,13 +225,13 @@
       ],
       "metadata": {
         "id": "2QiklEyX8Ac8",
-        "outputId": "0fca4279-cfdc-4f9c-844f-665143cb7071",
+        "outputId": "97bab2e8-84c3-4e66-d512-a14837f18eb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -245,13 +275,13 @@
       ],
       "metadata": {
         "id": "Yoxr6ef7_TZS",
-        "outputId": "a96b4447-3511-4586-f902-e90f9891a4d0",
+        "outputId": "828424b2-fa8d-442a-aca8-7e29cecc8229",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -415,12 +445,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 812
+          "height": 810
         },
         "id": "VT2WVlGzjwxH",
-        "outputId": "7b0c9183-42ea-4b8e-af46-a3ac9baeab8d"
+        "outputId": "c71c99a5-2758-4c1f-b0e5-ce44383d711a"
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +473,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -479,9 +509,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r2rMMBxwBdot",
-        "outputId": "ab6f7849-d384-4730-86f7-30faa3b38409"
+        "outputId": "65a938c6-b916-4a13-ccb9-a683c4130ca8"
       },
-      "execution_count": 32,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,13 +530,13 @@
       ],
       "metadata": {
         "id": "rVu4d6qVOTd5",
-        "outputId": "8e32e4e4-fa16-42a8-9867-947d773e5c6e",
+        "outputId": "5e73501b-89b1-4fdd-cee7-f9f9cedd46a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
         }
       },
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -540,13 +570,13 @@
       ],
       "metadata": {
         "id": "uGGgy_OfB7p6",
-        "outputId": "8fb15539-4693-4009-abc2-fad78e01ea39",
+        "outputId": "8dd0329c-6f44-423a-cc9d-56a7c3b27178",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 687
         }
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -588,12 +618,12 @@
       ],
       "metadata": {
         "id": "ERQcbDmlMhB3",
-        "outputId": "ee525eda-0222-40e3-c36d-9e19ed1eecf0",
+        "outputId": "1768d1e0-2ed7-4233-fe29-2879d1ade971",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,13 +642,13 @@
       ],
       "metadata": {
         "id": "wGj6QagOOIDm",
-        "outputId": "8b900877-0ae8-49c8-bb95-bb2850bb0289",
+        "outputId": "8cb45acf-c052-44ab-8e46-63f3123507cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
         }
       },
-      "execution_count": 34,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -781,13 +811,13 @@
       ],
       "metadata": {
         "id": "iSSjZvvRCUR8",
-        "outputId": "14d1845d-e8ea-4a70-8d41-2ece99df7397",
+        "outputId": "6efa4b63-ee76-434c-ba0b-d2b5d6a4d5bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 805
+          "height": 803
         }
       },
-      "execution_count": 36,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,12 +890,12 @@
       ],
       "metadata": {
         "id": "a6wYHSlW6TIi",
-        "outputId": "406fa00c-5425-490b-d5ed-8617e88c8904",
+        "outputId": "ea1ab066-982c-4eab-b108-19db794e709c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,6 +930,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "def load_inclinations(list_segments):\n",
+        "  list_densities = []\n",
+        "\n",
+        "  for segments in list_segments:\n",
+        "    list_tmp = []\n",
+        "    for key in segments:\n",
+        "      value = segments[key]\n",
+        "      list_tmp.append(approximate_angle(value))\n",
+        "    list_densities.append(list_tmp)\n",
+        "\n",
+        "  return list_densities\n",
+        "\n",
+        "list_densities = load_inclinations([segments]) # I need list of all segments"
+      ],
+      "metadata": {
+        "id": "AqGZyxI5KICk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Manuel - Rete neurale"
@@ -914,13 +967,16 @@
         "class NeuralNetwork(nn.Module):\n",
         "\n",
         "\n",
-        "  def __init__(self):\n",
+        "  def __init__(self, n_input, n_output):\n",
         "    super().__init__()\n",
+        "    self.n_input = n_input\n",
+        "    self.n_output = n_output\n",
+        "    self.mid_n = int((n_input + n_output) / 2)\n",
         "\n",
         "    # Define Layers:\n",
-        "    self.l1 = nn.Linear(151, 88) # layer 1. 151 input features: 49 x coordinates of the centroid, 49 y coordinates of the centroid, 49 density values, 4 number of inclinations\n",
-        "    self.l2 = nn.Linear(88, 26) # layer 2\n",
-        "    self.l3 = nn.Linear(26, 26) # layer 3\n",
+        "    self.l1 = nn.Linear(self.n_input, self.mid_n) # layer 1\n",
+        "    self.l2 = nn.Linear(self.mid_n, self.n_output) # layer 2\n",
+        "    self.l3 = nn.Linear(self.n_output, self.n_output) # layer 3\n",
         "\n",
         "    # Define Activation functions:\n",
         "    self.relu = nn.ReLU()\n",
@@ -948,37 +1004,42 @@
         "\n",
         "\n",
         "\n",
-        "def normalize(value, min, max)\n",
+        "# General purpose functions\n",
+        "\n",
+        "def normalize(value, min, max):\n",
         "  return (value - min) / (max - min)\n",
         "\n",
         "\n",
-        "def create_dataset(images_centroids, density_values, n_inclinations):\n",
-        "  # Expecting centroid_coordinates to be a list of list of lists\n",
-        "  list = [] # Choose the correct data structure\n",
-        "  for sample in images_centroids:\n",
-        "    for centroid in sample:\n",
+        "def create_dataset(n_samples, images_centroids, density_values, n_inclinations):\n",
+        "  i = 0\n",
+        "  dataset_list = []\n",
+        "\n",
+        "  while i < n_samples:\n",
+        "    list_tmp = []\n",
+        "\n",
+        "    for centroid in images_centroids:\n",
         "      for (x,y) in centroid:\n",
-        "        list.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
-        "        list.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
+        "        list_tmp.append(normalize(x, min_x_coordinates, max_x_coordinates))\n",
+        "        list_tmp.append(normalize(y, min_y_coordinates, max_y_coordinates))\n",
         "\n",
-        "  # Expecting density_values to be a list of lists\n",
-        "  for sample in density_values:\n",
-        "    for density in sample:\n",
-        "      list.append(normalize(density, min_density_value, max_density_value))\n",
+        "    for density in density_values[i]:\n",
+        "      list_tmp.append(normalize(density, min_density_value, max_density_value))\n",
         "\n",
-        "  # Expecting n_inclinations to be a list of lists\n",
-        "  for sample in n_inclinations:\n",
-        "    for n_inclination in sample:\n",
-        "      list.append(normalize(n_inclination, min_n_inclinations, max_n_inclinations))\n",
+        "    for n_inclination in n_inclinations[i]:\n",
+        "      list_tmp.append(normalize(n_inclination, min_n_inclinations, max_n_inclinations))\n",
         "\n",
-        "  return torch.tensor(list)\n",
+        "    dataset_list.append(list_tmp)\n",
+        "\n",
+        "  return torch.tensor(dataset_list)\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "# Define min and max for features values. If there is no centroid, coordinates x and y are 0.\n",
-        "min_x_coordinates = 0\n",
+        "# Define macros.\n",
+        "number_of_features = 151 # 49 x coordinates of the centroid, 49 y coordinates of the centroid, 49 density values, 4 number of inclinations.\n",
+        "number_of_outputs = 26 # Output letters of the alphabet.\n",
+        "min_x_coordinates = 0 # If there is no centroid, coordinates x and y are 0.\n",
         "max_x_coordinates = 4\n",
         "min_y_coordinates = 0\n",
         "max_y_coordinates = 4\n",
@@ -989,15 +1050,19 @@
         "\n",
         "\n",
         "# Intialize NN, loss function and optimizer\n",
-        "NN = NeuralNetwork()\n",
+        "NN = NeuralNetwork(number_of_features, number_of_outputs)\n",
         "criterion = nn.NLLLoss()\n",
         "optimizer = optim.Adam(NN.parameters(), lr = 0.001)\n",
         "\n",
+        "# set CPU or GPU, if available\n",
+        "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
         "# Prepare dataset\n",
+        "trainset = create_dataset(100, list_centroids_rel, list_densities, list_densities)\n",
         "'''\n",
         "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,)),])\n",
         "trainset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=True, transform=transform)\n",
-        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=True) # trainloader is what holds the data loader object which takes care of shuffling the data and constructing the batches\n",
+        "trainloader = torch.utils.data.DataLoader(trainset, batch_size=64, shuffle=False) # trainloader is what holds the data loader object which takes care of shuffling the data and constructing the batches\n",
         "testset = datasets.MNIST('~/.pytorch/MNIST_data/', download=True, train=False, transform=transform)\n",
         "testloader = torch.utils.data.DataLoader(testset, batch_size=64, shuffle=False) # No need to shuffle test data.\n",
         "'''\n",
@@ -1029,18 +1094,68 @@
         "id": "KNvh-lr3onFu",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 140
+          "height": 361
         },
-        "outputId": "fcc48a44-0194-47a5-a9db-6aa1b5df3e66"
+        "outputId": "d34786a4-e1cc-46a0-b4da-c6a327d1b2c1"
       },
-      "execution_count": 20,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
+          "ename": "KeyboardInterrupt",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-8e5658e4d557>\"\u001b[0;36m, line \u001b[0;32m38\u001b[0m\n\u001b[0;31m    def normalize(value, min, max)\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-36-0b4d5b8e841b>\u001b[0m in \u001b[0;36m<cell line: 95>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;31m# Prepare dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m \u001b[0mtrainset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_centroids_rel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_densities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m '''\n\u001b[1;32m     97\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransforms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-36-0b4d5b8e841b>\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(n_samples, images_centroids, density_values, n_inclinations)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcentroid\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages_centroids\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcentroid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_x_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_x_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0mlist_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_y_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_y_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdb on"
+      ],
+      "metadata": {
+        "id": "aSztbiP4OLVS",
+        "outputId": "c60811b3-cd55-4c00-b002-f4a1fc60936d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Automatic pdb calling has been turned ON\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdb off"
+      ],
+      "metadata": {
+        "id": "hfRnQsXbP1gV",
+        "outputId": "19ceb47e-a071-4a4e-a8c0-cf3a7860df6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Automatic pdb calling has been turned OFF\n"
           ]
         }
       ]
